# gemm-fp32

./: CMakeLists.txt  README.md
scripts/: plot.py  run_bench.sh
src/: cublaslt_fp16acc.cu  gemm_cublas_gemmex_fp16acc.cu  gemm_thread_tiled_1d.cu  gemm_tiled_fp16acc.cu  gemm_tiled_fp16acc_rb1x4.cu  gemm_tiled_fp16acc_rb2x4.cu  gemm_wmma_fp16acc.cu  gemm_wmma_fp16acc_staged.cu  gemm_wmma_fp16acc_staged_cpasync.cu  gemm_wmma_fp16acc_staged_cpasync_k32.cu  gemm_wmma_fp16acc_staged_cpasync_k32_4x2.cu  gemm_wmma_fp16acc_staged_cpasync_k32_4x4_skew16.cu  gemm_wmma_fp16acc_staged_cpasync_k32_bcol.cu  gemm_wmma_fp16acc_staged_cpasync_k32_skew16.cu  gemm_wmma_fp16acc_staged_cpasync_k32_skewA16_B8.cu  gemm_wmma_fp16acc_staged_cpasync_k64.cu  gemm_wmma_fp16acc_staged_cpasync_k64_4x4_skew16.cu  gemm_wmma_fp16acc_staged_cpasync_k64_4x4_skew16_prefetch.cu  gemm_wmma_fp16acc_staged_cpasync_k64_4x4_skew16_prefetch2.cu  gemm_wmma_fp16acc_staged_cpasync_k64_4x8_skew16.cu  gemm_wmma_fp16acc_staged_cpasync_k64_skew16.cu  main_bench.cu
src/fail/: gemm_wmma_fp16acc_staged_cpasync_k32_4x8_skew16.cu  gemm_wmma_fp16acc_staged_cpasync_k32_skewA16_B32.cu  gemm_wmma_fp16acc_staged_cpasync_k32_skewA24_B16.cu  gemm_wmma_fp16acc_staged_cpasync_k32_skewA24_B32.cu  gemm_wmma_fp16acc_staged_cpasync_k32_skewA8_B16.cu  gemm_wmma_fp16acc_staged_cpasync_k32_skewA8_B24.cu  gemm_wmma_fp16acc_staged_cpasync_k32_skewA8_B32.cu  gemm_wmma_fp16acc_staged_cpasync_k32_split.cu  gemm_wmma_fp16acc_staged_cpasync_k64_4x4_skew16_swizzle2d_n4.cu  gemm_wmma_fp16acc_staged_cpasync_k64_4x4_skew16_swizzle_n4.cu  gemm_wmma_fp16acc_staged_cpasync_k64_4x4_skewA16_B32.cu  gemm_wmma_fp16acc_staged_db.cu
